# pulsecommerce-data-platform

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: data-platform-ci.yml  terraform-drift-check.yml
analytics/api/: Dockerfile  main.py
analytics/api/routers/: products.py  users.py
analytics/dbt/: dbt_project.yml
analytics/dbt/macros/: generate_surrogate_key.sql
analytics/dbt/profiles/: ci.yml  prod.yml
analytics/dbt/tests/: assert_dim_users_no_duplicate_current.sql  assert_fct_orders_no_negative_revenue.sql
docs/: architecture.html
docs/ADR/: ADR-001-kappa-vs-lambda.md  ADR-002-iceberg-vs-delta.md  ADR-003-msk-vs-kinesis.md
docs/data-dictionary/: gold_layer_data_dictionary.md
docs/runbooks/: flink-checkpoint-failure-runbook.md  msk-consumer-lag-runbook.md
infrastructure/airflow/dags/: churn_model_retrain_dag.py  gold_models_dag.py  silver_refresh_dag.py
infrastructure/terraform/: main.tf  outputs.tf  variables.tf
ingestion/batch/: ad_attribution_producer.py  product_catalog_producer.py
ingestion/schema_registry/: clickstream.v1.avsc  orders_cdc.v1.avsc
ml/features/: flink_feature_writer.py  user_behavioral_features.py
ml/inference/: churn_endpoint_config.json
ml/training/: churn_model.py
processing/flink/: bronze_writer.py  churn_enrichment.py  fraud_scorer.py  session_stitcher.py
processing/glue/: bronze_to_silver_events.py  bronze_to_silver_orders.py  silver_product_catalog.py
processing/quality/: bronze_clickstream_expectations.py  silver_orders_expectations.py
processing/schema/: bootstrap.py  evolve_clickstream.py
tests/integration/: test_bronze_to_silver_pipeline.py
tests/quality/: run_gx_ci_suite.py
tests/unit/: test_fraud_scorer.py  test_session_stitcher.py
(+40 files in other folders)
