[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pulsecommerce-data-platform"
version = "1.0.0"
description = "Real-Time E-Commerce Behavioral Analytics Platform — Kappa + Medallion Lakehouse on AWS"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "PulseCommerce Data Engineering" }]

[project.optional-dependencies]
flink = [
    "apache-flink==1.19.0",
    "apache-flink-libraries==1.19.0",
]
glue = [
    "aws-glue-sessions==1.0.5",
    "awsglue-local==3.0",
]
dbt = [
    "dbt-glue==1.8.0",
    "dbt-core==1.8.0",
]
ml = [
    "sagemaker>=2.220.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
]
api = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "aioboto3==13.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ingestion*", "processing*", "analytics*", "ml*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["ingestion", "processing", "analytics", "ml", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["ingestion", "processing", "analytics", "ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: fast unit tests, no external deps",
    "integration: requires local Kafka/Flink/Spark stack",
    "slow: long-running tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true   # many AWS/Flink stubs not available
